messy navigator and sidebar are connected now

--- a/frontend/src/components/MenuButton/menubutton.module.css
+++ b/frontend/src/components/MenuButton/menubutton.module.css
@@ -21,7 +21,7 @@
   background-color: var(--primary);
 }
 
-.container[data-variant="primary"][data-active] {
+.container[data-variant="primary"][data-active="true"] {
   background-color: var(--on-background);
   color: var(--on-surface);
 }
