basic document hook is added and link the directory to the editor

--- a/frontend/src/components/Directory/directory.module.css
+++ b/frontend/src/components/Directory/directory.module.css
@@ -24,6 +24,7 @@
   padding-top: var(--spacing-tiny);
   padding-bottom: var(--spacing-tiny);
   cursor: pointer;
+  text-overflow: ellipsis;
 }
 
 .file[data-active="true"] {
