--- a/frontend/src/screens/ScreenDocuments/screendocuments.module.css
+++ b/frontend/src/screens/ScreenDocuments/screendocuments.module.css
@@ -3,3 +3,15 @@
   width: 100%;
   height: 100%;
 }
+
+.editor-container {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.editor-placeholder {
+  color: var(--on-background);
+  white-space: nowrap;
+}
