--- a/frontend/src/components/Notification/notification.module.css
+++ b/frontend/src/components/Notification/notification.module.css
@@ -20,9 +20,14 @@
 }
 
 .btn-close {
+  color: var(--on-surface);
   padding: var(--spacing-small) var(--spacing-large);
 }
 
 .wrapper[data-disabled="true"] {
-  width: 0%;
+  width: 0;
+}
+
+.wrapper[data-warmed="true"] {
+  background-color: var(--error);
 }
