--- a/frontend/src/components/Notification/notification.module.css
+++ b/frontend/src/components/Notification/notification.module.css
@@ -17,7 +17,7 @@
   align-items: center;
   overflow: hidden;
   white-space: nowrap;
-  transition: all .3s;
+  transition: width .3s;
 }
 
 .btn-close {
