--- a/frontend/src/components/Directory/directory.module.css
+++ b/frontend/src/components/Directory/directory.module.css
@@ -18,13 +18,11 @@
 }
 
 .file {
+  position: relative;
   color: var(--on-surface-gray);
   border-top: 1px solid var(--on-background);
-  padding-left: var(--spacing-large);
-  padding-top: var(--spacing-tiny);
-  padding-bottom: var(--spacing-tiny);
+  padding: var(--spacing-tiny) var(--spacing-large);
   cursor: pointer;
-  text-overflow: ellipsis;
 }
 
 .file[data-active="true"] {
@@ -39,4 +37,31 @@
 
 .file:last-of-type {
   border-bottom: 1px solid var(--on-background);
+}
+
+.ellipsis {
+  display: flex;
+  position: relative;
+  overflow: hidden;
+}
+
+.ellipsis > p {
+  margin: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.ellipsis::after {
+  content: attr(data-filetype);
+  z-index: 1;
+}
+
+.file > span {
+  display: block;
+  position: absolute;
+  font-size: 18px;
+  top: 50%;
+  transform: translateY(-50%);
+  right: var(--spacing-tiny);
 }
