--- a/frontend/src/components/Sidebar/sidebar.module.css
+++ b/frontend/src/components/Sidebar/sidebar.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: var(--spacing-small);
+  padding-bottom: 0;
   background-color: var(--background-gray);
   border-right: 2px solid var(--on-background);
   transition: all .3s;
