password field added

--- a/frontend/src/screens/LoginScreen/loginscreen.module.css
+++ b/frontend/src/screens/LoginScreen/loginscreen.module.css
@@ -1,3 +1,10 @@
 .container {
   flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.password-field {
+  width: var(--field-width);
 }
