--- a/frontend/src/screens/LoginScreen/loginscreen.module.css
+++ b/frontend/src/screens/LoginScreen/loginscreen.module.css
@@ -1,10 +1,19 @@
 .container {
   flex-grow: 1;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
 }
 
-.password-field {
-  width: var(--field-width);
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: var(--form-width);
+  height: 60%;
+}
+
+.form > *:nth-child(2) {
+  margin: auto 0;
+  width: var(--button-width);
 }
