--- a/frontend/src/components/EditText/edittext.module.css
+++ b/frontend/src/components/EditText/edittext.module.css
@@ -24,6 +24,7 @@
   outline: none;
   border: none;
   border-bottom: 1px solid transparent;
+  border-top: 1px solid transparent;
   color: var(--on-surface-gray);
   font-weight: bold;
 }
